deploy/overlays/dev/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: haproxy-production
  namespace: haproxy-template-ic
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
      protocol: TCP
    - name: health
      port: 8404
      targetPort: 8404
      protocol: TCP
